fixed bottom content of the page not showing bug

--- a/src/screens/Page.css
+++ b/src/screens/Page.css
@@ -6,6 +6,7 @@
 
 .page__content{
     padding: 1em 2em 1em 2em;
+    margin-bottom: 8em;
 }
 
 .page__content .top{
